addons/prometheus-operator/monitoring-stack/resources/prometheus/configs/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  # Allow all egress for connecting to all services inside and outside the cluster
  # To limit the reach we reccomend to always add a deny all ingress and egress to your namespace and adding only the
  # needed rules matching the correct pods
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 9090
      protocol: TCP
    - port: 8080
      protocol: TCP
